2004-03-25  Todd Berman  <tberman@sevenl.net>

	* VFS/Vfs.cs: Added new code from Dashboard to provide a different
	external app identification mechanism.