@@ -1,3 +1,8 @@
+2004-03-29  Todd Berman  <tberman@sevenl.net>
+
+	* FileIcons/FileIconLoader.cs: fix from richard torkar to workaround a
+	strange Gnome issue.
+
 2004-03-25  Todd Berman  <tberman@sevenl.net>
 
 	* VFS/Vfs.cs: Added new code from Dashboard to provide a different
